--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="music_never_die">Music never die</string>
     <string name="song_name">Song name</string>
     <string name="back_icon_description">Description</string>
-    <string name="favorite_description">Favorite</string>
+    <string name="favourite_description">Favourite</string>
     <string name="start_music">00:00</string>
     <string name="end_music">Loading</string>
     <string name="repeat_btn">Repeat</string>
@@ -27,5 +27,13 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="next_btn_np">Next button now playing</string>
     <string name="play_pause_btn_np">Play pause button now playing</string>
-
+    <string name="song_img">Song Image</string>
+    <string name="playlist_name">Playlist name</string>
+    <string name="delete">Delete</string>
+    <string name="user_name">Your name</string>
+    <string name="add">Add</string>
+    <string name="delete_all">Delete all</string>
+    <string name="search_song">Search song</string>
+    <string name="topic_feedback">Topic</string>
+    <string name="send_feedback">Send</string>
 </resources>
