--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="close">Close</string>
     <string name="app_icon">Icon</string>
     <string name="text_nav">Welcome to world of Music</string>
+    <string name="login">Login</string>
     <string name="feedback">Feedback</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
